--- a/index.html
+++ b/index.html
@@ -5,8 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Dark Mode</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <header>
+        <div class="wrapper">
+            <h1>Social Media Dashboard</h1>
+            <p>Total Followers: 23, 004</p>
+        </div>
+    </header>
+    <section>
+        <div class="wrapper">
+            <article class="card">
+                <p class="card-title">
+                    <img src="images/icon-facebook.svg" alt="Logo Facebook">
+                    @JesusArevalo
+                </p>
+                <p class="card-followers">
+                    <span class="card-followers-number">1987</span>
+                    <span class="card-followers-title">Followers</span>
+                </p>
+                <p class="card-today">
+                    <img src="images/icon-up.svg" alt="Icono up">
+                    12 Today
+                </p>
+            </article>
+        </div>
+    </section>
+    <section>
+
+    </section>
 </body>
 </html>
